# temperature_mqtt_api

./: .dockerignore  Dockerfile  README.md  generate-certificate.sh  pyproject.toml
app/: api.py  callbacks.py  main.py  utils.py
